--- a/src/Timetable Generator Library/Timetable Schedulers.csproj
+++ b/src/Timetable Generator Library/Timetable Schedulers.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GAGenerator.cs" />
+    <Compile Include="Preferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -59,6 +60,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="RedBlackTree.cs" />
+    <Compile Include="Restrictions.cs" />
     <Compile Include="SeasonalTimetable.cs" />
     <Compile Include="YearlyTimetable.cs" />
   </ItemGroup>
