--- a/src/Genetic Algorithm Analyzer/Genetic Algorithm Analyzer.csproj
+++ b/src/Genetic Algorithm Analyzer/Genetic Algorithm Analyzer.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C9A58A4B-181C-469A-A185-A20ECCBD8316}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Genetic_Algorithm_Analyzer</RootNamespace>
+    <RootNamespace>UoftTimetableGenerator.DataModels.GeneratorAnalyzer</RootNamespace>
     <AssemblyName>Genetic Algorithm Analyzer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -69,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
