--- a/src/Timetable Generator Library/Timetable Schedulers.csproj
+++ b/src/Timetable Generator Library/Timetable Schedulers.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GAGenerator.cs" />
+    <Compile Include="GreedyGenerator.cs" />
+    <Compile Include="ITimetableGenerator.cs" />
     <Compile Include="Preferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -62,6 +64,7 @@
     <Compile Include="RedBlackTree.cs" />
     <Compile Include="Restrictions.cs" />
     <Compile Include="SeasonalTimetable.cs" />
+    <Compile Include="StatsPerGeneration.cs" />
     <Compile Include="YearlyTimetable.cs" />
   </ItemGroup>
   <ItemGroup>
