--- a/src/Data Models/app.config
+++ b/src/Data Models/app.config
@@ -6,5 +6,11 @@
         <add name="Data_Models.Properties.Settings.UoftDatabaseConnectionString"
             connectionString="Data Source=LAPTOP;Initial Catalog=UoftDatabase;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="UoftTimetableGenerator.DataModels.Properties.Settings.UoftDatabaseConnectionString"
+            connectionString="Data Source=LAPTOP;Initial Catalog=UoftDatabase;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="UoftTimetableGenerator.DataModels.Properties.Settings.UofTConnectionString"
+            connectionString="Data Source=LAPTOP;Initial Catalog=UofT;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
