--- a/src/Web Scrapper/App.config
+++ b/src/Web Scrapper/App.config
@@ -6,6 +6,12 @@
         <add name="Web_Scrapper.Properties.Settings.UoftDatabaseConnectionString"
             connectionString="Data Source=LAPTOP;Initial Catalog=UoftDatabase;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="UoftTimetableGenerator.WebScrapper.Properties.Settings.UoftDatabaseConnectionString"
+            connectionString="Data Source=LAPTOP;Initial Catalog=UoftDatabase;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="UoftTimetableGenerator.WebScrapper.Properties.Settings.UofTConnectionString"
+            connectionString="Data Source=LAPTOP;Initial Catalog=UofT;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
