--- a/src/Timetable Generator Library/Timetable Schedulers.csproj
+++ b/src/Timetable Generator Library/Timetable Schedulers.csproj
@@ -51,21 +51,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GAGenerator.cs" />
-    <Compile Include="GreedyGenerator.cs" />
-    <Compile Include="ITimetableGenerator.cs" />
-    <Compile Include="Preferences.cs" />
+    <Compile Include="Generators\GAGenerator.cs" />
+    <Compile Include="Generators\GreedyGenerator.cs" />
+    <Compile Include="Timetables\ITimetable.cs" />
+    <Compile Include="Generators\ITimetableGenerator.cs" />
+    <Compile Include="Generators\Preferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="RedBlackTree.cs" />
-    <Compile Include="Restrictions.cs" />
-    <Compile Include="SeasonalTimetable.cs" />
-    <Compile Include="StatsPerGeneration.cs" />
-    <Compile Include="YearlyTimetable.cs" />
+    <Compile Include="Data Structures\RedBlackTree.cs" />
+    <Compile Include="Generators\Restrictions.cs" />
+    <Compile Include="Timetables\SeasonalTimetable.cs" />
+    <Compile Include="Generators\StatsPerGeneration.cs" />
+    <Compile Include="Timetables\YearlyTimetable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
