--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,14 @@
 /src/Timetable Generator Library/bin
 /src/Web App/bin
 /src/Web Scrapper/bin
+/src/.vs
 
+########################################################################################
+# Hide all the obj files in each project
+######################################################################################## 
+/src/Data Models/obj
+/src/Database/obj
+/src/Genetic Algorithm Analyzer/obj
+/src/Timetable Generator Library/obj
+/src/Web App/obj
+/src/Web Scrapper/obj
