Added a tenor.gif so that it will be displayed when the server is generating the timetables

--- a/src/Web Scrapper/Web Scrapper.csproj
+++ b/src/Web Scrapper/Web Scrapper.csproj
@@ -61,6 +61,7 @@
     <Compile Include="BuildingDistancePopulator.cs" />
     <Compile Include="BuildingListPopulator.cs" />
     <Compile Include="CourseSchedulePopulator.cs" />
+    <Compile Include="IWebScrapper.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
